force-app/main/default/objects/Account/fields/Business_Stage__c.field-meta.xml
<CustomField>
    <fullName>Business_Stage__c</fullName>
    <label>Business Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Idea</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Established</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>