force-app/main/default/objects/Account/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <description>Multi-select list of active SBA/state certifications.</description>
    <label>Certification Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8a</fullName>
                <label>8(a)</label>
            </value>
            <value>
                <fullName>WOSB</fullName>
            </value>
            <value>
                <fullName>EDWOSB</fullName>
            </value>
            <value>
                <fullName>VOSB</fullName>
            </value>
            <value>
                <fullName>SDVOSB</fullName>
            </value>
            <value>
                <fullName>HUBZone</fullName>
            </value>
            <value>
                <fullName>MBE</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>