force-app/main/default/objects/Account/fields/Grant_Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Grant_Readiness_Score__c</fullName>
    <description>0-100 readiness score written back from the Data Cloud Calculated Insight Grant_Readiness_CI.</description>
    <label>Grant Readiness Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>