force-app/main/default/objects/Account/fields/HUBZone_Certified__c.field-meta.xml
<CustomField>
    <fullName>HUBZone_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Self-declared. Verified via SBA HUBZone map before certification is claimed.</description>
    <label>HUBZone Certified</label>
    <type>Checkbox</type>
</CustomField>