force-app/main/default/objects/Account/fields/Industry_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Industry_Keywords__c</fullName>
    <description>Plain-English keywords fed into the Grants.gov search2 "keyword" parameter.</description>
    <label>Industry Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>