force-app/main/default/objects/Account/fields/Minority_Owned__c.field-meta.xml
<CustomField>
    <fullName>Minority_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Self-declared. Used only to widen set-aside grant discovery.</description>
    <label>Minority Owned</label>
    <type>Checkbox</type>
</CustomField>