force-app/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <description>6-digit NAICS code used to derive Grants.gov funding category via Grant_Category_Mapping__mdt.</description>
    <label>NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>