force-app/main/default/objects/Account/fields/Operating_State__c.field-meta.xml
<CustomField>
    <fullName>Operating_State__c</fullName>
    <description>Primary U.S. state of operation.</description>
    <label>Operating State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>AL</fullName><default>false</default><label>Alabama</label></value>
            <value><fullName>AK</fullName><default>false</default><label>Alaska</label></value>
            <value><fullName>AZ</fullName><default>false</default><label>Arizona</label></value>
            <value><fullName>AR</fullName><default>false</default><label>Arkansas</label></value>
            <value><fullName>CA</fullName><default>false</default><label>California</label></value>
            <value><fullName>CO</fullName><default>false</default><label>Colorado</label></value>
            <value><fullName>CT</fullName><default>false</default><label>Connecticut</label></value>
            <value><fullName>DE</fullName><default>false</default><label>Delaware</label></value>
            <value><fullName>DC</fullName><default>false</default><label>District of Columbia</label></value>
            <value><fullName>FL</fullName><default>false</default><label>Florida</label></value>
            <value><fullName>GA</fullName><default>false</default><label>Georgia</label></value>
            <value><fullName>HI</fullName><default>false</default><label>Hawaii</label></value>
            <value><fullName>ID</fullName><default>false</default><label>Idaho</label></value>
            <value><fullName>IL</fullName><default>false</default><label>Illinois</label></value>
            <value><fullName>IN</fullName><default>false</default><label>Indiana</label></value>
            <value><fullName>IA</fullName><default>false</default><label>Iowa</label></value>
            <value><fullName>KS</fullName><default>false</default><label>Kansas</label></value>
            <value><fullName>KY</fullName><default>false</default><label>Kentucky</label></value>
            <value><fullName>LA</fullName><default>false</default><label>Louisiana</label></value>
            <value><fullName>ME</fullName><default>false</default><label>Maine</label></value>
            <value><fullName>MD</fullName><default>false</default><label>Maryland</label></value>
            <value><fullName>MA</fullName><default>false</default><label>Massachusetts</label></value>
            <value><fullName>MI</fullName><default>false</default><label>Michigan</label></value>
            <value><fullName>MN</fullName><default>false</default><label>Minnesota</label></value>
            <value><fullName>MS</fullName><default>false</default><label>Mississippi</label></value>
            <value><fullName>MO</fullName><default>false</default><label>Missouri</label></value>
            <value><fullName>MT</fullName><default>false</default><label>Montana</label></value>
            <value><fullName>NE</fullName><default>false</default><label>Nebraska</label></value>
            <value><fullName>NV</fullName><default>false</default><label>Nevada</label></value>
            <value><fullName>NH</fullName><default>false</default><label>New Hampshire</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>