force-app/main/default/objects/Account/fields/Profile_Complete__c.field-meta.xml
<CustomField>
    <fullName>Profile_Complete__c</fullName>
    <description>Gate for Grant_Discovery topic. True when core intake fields are all populated.</description>
    <formula>AND(
    NOT(ISBLANK(NAICS_Code__c)),
    NOT(ISBLANK(Industry_Keywords__c)),
    NOT(ISBLANK(TEXT(Operating_State__c))),
    NOT(ISBLANK(TEXT(Revenue_Band__c))),
    NOT(ISBLANK(TEXT(Business_Stage__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Complete</label>
    <type>Checkbox</type>
</CustomField>