force-app/main/default/objects/Account/fields/Revenue_Band__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Band__c</fullName>
    <label>Revenue Band</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under_100k</fullName>
                <label>&lt; $100k</label>
            </value>
            <value>
                <fullName>100k_1M</fullName>
                <label>$100k - $1M</label>
            </value>
            <value>
                <fullName>1M_10M</fullName>
                <label>$1M - $10M</label>
            </value>
            <value>
                <fullName>Over_10M</fullName>
                <label>&gt; $10M</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>