force-app/main/default/objects/Account/fields/SAM_Registration_Active__c.field-meta.xml
<CustomField>
    <fullName>SAM_Registration_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the applicant confirms an active SAM.gov registration.</description>
    <label>SAM Registration Active</label>
    <type>Checkbox</type>
</CustomField>