force-app/main/default/objects/Account/fields/SAM_UEI__c.field-meta.xml
<CustomField>
    <fullName>SAM_UEI__c</fullName>
    <description>12-character SAM.gov Unique Entity Identifier. Required to receive any federal grant.</description>
    <label>SAM UEI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>