force-app/main/default/objects/Account/fields/Service_Disabled_Veteran__c.field-meta.xml
<CustomField>
    <fullName>Service_Disabled_Veteran__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Self-declared. Enables SDVOSB set-aside search flag.</description>
    <label>Service-Disabled Veteran Owned</label>
    <type>Checkbox</type>
</CustomField>