force-app/main/default/objects/Account/recordTypes/Small_Business.recordType-meta.xml
<RecordType>
    <fullName>Small_Business</fullName>
    <active>true</active>
    <description>MWBE-eligible small business record type used by the EqualStart Advisor.</description>
    <label>Small Business</label>
</RecordType>